--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=Du52hw2xGxMAX8PMtzq&oh=1ea99369e2f6d419df149515095de09e&oe=5EA780EA" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=NXtmV_hWn0MAX89m2dK&oh=e9f056f85daaf63feb91802963318281&oe=5EAB756A" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=j_DZfJgSBIkAX9hx-0l&oh=666520d3f15cd4415647159d1a88075c&oe=5EA70664" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=j_DZfJgSBIkAX9hx-0l&oh=2321d59645a9e011d5116f1dea28c23b&oe=5EAAFAE4" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -172,7 +172,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=UmGqDO2iSJoAX-hRuam&oh=35f6cdbfc11da8f3786dde78dec7e2ea&oe=5EA70360" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=UmGqDO2iSJoAX-hRuam&oh=4653c6aefaeabce2035e7ee544feac19&oe=5EAAF7E0" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,20 +182,10 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=nP0Chvc6708AX_XFLaC&oh=a661ce2711dc840d25c9c6b8ffd1e9fc&oe=5EA94E4B" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7f8-6lbo59sAX9evF1g&oh=cff07a03a362e1970d9ef9b263a491ee&oe=5EA94E4B" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
-								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=OS8bkn_fYtcAX_14ySs&oh=e86c1cb81df5cd20fdbdff6b5b847f6f&oe=5EA856A9" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
 								</a>
 								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -207,12 +197,22 @@
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=eR2u-ca31O0AX89bkVi&oh=1de3cb084d28eba9b2927615b48f64b2&oe=5EA90ACE" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=jeANLO3QQsoAX9CNR6V&oh=9624bd60998063e9d9a3c99057cc9615&oe=5EA7FFB5" alt="Магазин женской одежды">
+									</div>
+									<div class="article-more__item-name" style="
+">Магазин женской одежды</div>
+								</a>
+								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=OS8bkn_fYtcAX_14ySs&oh=e86c1cb81df5cd20fdbdff6b5b847f6f&oe=5EA856A9" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
