--- a/links.html
+++ b/links.html
@@ -142,7 +142,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>22</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=WwOz2_9OwgIAX9cB2ZI&oh=8997597e0e90f83839845f1c9b921b02&oe=5EACAFF6" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84354333_883435888780501_1221484559674647471_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=90sL2laTDYUAX-cy8rU&oh=2ef7d4aca256603ac25f0fd59f8b67e6&oe=5EACAFF6" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=gyV5XL9GvigAX-pV7-t&oh=0ba5cc1c593bfcb5f0141206061cf80b&oe=5EAC51B8" alt="">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80467078_636509520428268_1484966008712395743_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=Ouaf5uLmtDAAX_Ee0mh&oh=fac5680f44a4651ed3bc85b5124f7c06&oe=5EAC51B8" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,7 +182,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7f8-6lbo59sAX9evF1g&oh=cff07a03a362e1970d9ef9b263a491ee&oe=5EA94E4B" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7f8-6lbo59sAX9evF1g&oh=0ca41beddcc621ee3932b201df6a21d6&oe=5EAD42CB" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
@@ -192,20 +192,20 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=uRuUbJpe3NwAX_7EMaz&oh=63e05ffecab9e460cd08a00b186dbf3e&oe=5EACC2A2" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVHDL6ntmxgAX-BoaAz&oh=03c3b369c7716a71f24d3a6360709d67&oe=5EACC2A2" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
 								</a>
-								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+								<a href="./posts/./B8YWKAlnPrv.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=jeANLO3QQsoAX9CNR6V&oh=1baa39b7837f0997de8db00657fddf8f&oe=5EABF435" alt="Магазин женской одежды">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=KCbm0MMKz60AX80xMQC&oh=edb40868f861813172602d98c067bec3&oe=5EACFF4E" alt="">
 									</div>
 									<div class="article-more__item-name" style="
-">Магазин женской одежды</div>
+"></div>
 								</a>
 								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
 									<div class="article-more__item-pic">
