--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=NXtmV_hWn0MAX89m2dK&oh=e9f056f85daaf63feb91802963318281&oe=5EAB756A" alt="Қайрат Нұрсағатов"></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/79270846_2506303486133873_9108935648319897600_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=3PRlWOxsErQAX_3yNVs&oh=a13b7a15cc875b8753a88507134c8d38&oe=5EAF69EA" alt="Қайрат Нұрсағатов"></div>
 							<div class="header__logo-txt">k.nursagatov</div>
 						</a>
 						<div class="header__title">Қайрат Нұрсағатов</div>
@@ -152,7 +152,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>18</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FGeLNYFHz4cAX9Bfae7&oh=7288394db8ab75c0da50447d5e8b03e4&oe=5EAAFAE4" alt="РВШИ 2ой взвод">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81623907_230784344576686_1179701892963666872_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=FGeLNYFHz4cAX9Bfae7&oh=9fd01ef1b4ad376196d669fc8ae69a53&oe=5EAEEF64" alt="РВШИ 2ой взвод">
 									</div>
 									<div class="article-more__item-name" style="
 ">РВШИ 2ой взвод</div>
@@ -172,7 +172,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>15</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=heUnTz_WSQ8AX_6A2nT&oh=2ea1ca7e0266571a161684265b9a9e5f&oe=5EAAF7E0" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87631466_253711848988959_8174171200955177125_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=heUnTz_WSQ8AX_6A2nT&oh=2959c76cc6b7e1311c6102e6416fff7b&oe=5EAEEC60" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
@@ -182,7 +182,7 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>13</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=7f8-6lbo59sAX9evF1g&oh=0ca41beddcc621ee3932b201df6a21d6&oe=5EAD42CB" alt="Кухни">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/71243680_2334386466872033_2031952423729882723_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=r6MG8Hos6mMAX9Wto9Q&oh=d0ae56298498e7560e8314e177345376&oe=5EAD42CB" alt="Кухни">
 									</div>
 									<div class="article-more__item-name" style="
 ">Кухни</div>
@@ -192,10 +192,20 @@
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=KCbm0MMKz60AX80xMQC&oh=edb40868f861813172602d98c067bec3&oe=5EACFF4E" alt="">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83429485_188794872203082_4722165991980344932_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=J2FwZ3mcLg8AX-JJb6m&oh=d233a06d087185dd117de4664bb2498c&oe=5EACFF4E" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
+								</a>
+								<a href="./posts/./magazin-zhenskoy-odezhdy.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75310188_982777065438653_7553395339649264087_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=1TDp4sozQuYAX8T5I-_&oh=f1240dade41a32fe82ace7c8a016fe3c&oe=5EABF435" alt="Магазин женской одежды">
+									</div>
+									<div class="article-more__item-name" style="
+">Магазин женской одежды</div>
 								</a>
 								<a href="./posts/./B8YVEuQnoXW.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -203,16 +213,6 @@
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83491922_850028829156410_6287547705488687896_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVHDL6ntmxgAX-BoaAz&oh=03c3b369c7716a71f24d3a6360709d67&oe=5EACC2A2" alt="">
-									</div>
-									<div class="article-more__item-name" style="
-"></div>
-								</a>
-								<a href="./posts/./B6XQlnGnymN.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>12</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81231964_425169515037839_1520186995730937212_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=BGegfVYnkhgAX_DLN9u&oh=c95bbb186ca0682dff6f96c219bcb64e&oe=5EAC4B29" alt="">
 									</div>
 									<div class="article-more__item-name" style="
 "></div>
